--- a/src/main/resources/templates/allItems.html
+++ b/src/main/resources/templates/allItems.html
@@ -229,7 +229,7 @@
                             <p class="card-text" th:text="${i.getName()}"></p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a th:href="'/' +${i.getId()}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                    <a th:href="'/item/' + ${i.getId()}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                 </div>
                                 <small th:text="${i.getTimeFormat()}" class="text-body-secondary"></small>
                             </div>
