--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -208,7 +208,6 @@
 
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
-
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <div class="col" th:each="i : ${items}">
                     <div class="card shadow-sm">
@@ -217,15 +216,13 @@
                             <p class="card-text" th:text="${i.getName()}"></p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a th:href="'/' +${i.getId()}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                                    <a th:href="'/item/' +${i.getId()}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                 </div>
                                 <small th:text="${i.getTimeFormat()}" class="text-body-secondary"></small>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
